[package]
name = "renogy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "rt", "process", "time", "fs", "io-util"] }
tokio-serial = { version = "5.4" }
tokio-modbus = { version = "0.11", default-features = false, features = ["rtu-sync"] }

[dev-dependencies]
clap = {version = "4.0", features = ["derive"] }